# depth_image_compression

./: .gitignore  ALGORITHM.md  CMakeLists.txt  README.md  bench.cpp  bench_dpred.cpp  conanfile.py  depth_codec.cpp  depth_codec.hpp  extract_depth_png.py  make_corpus_32fc1.py  pixi.toml
.github/workflows/: ci.yaml
depth_codec/: CMakeLists.txt  package.xml
depth_codec/benchmark/: bench.cpp  bench_dpred.cpp
depth_codec/src/: depth_codec.cpp
dpred_image_transport/: CMakeLists.txt  dpred_plugins.xml  package.xml
dpred_image_transport/include/dpred_image_transport/: dpred_publisher.hpp  dpred_subscriber.hpp
dpred_image_transport/src/: dpred_publisher.cpp  dpred_subscriber.cpp  manifest.cpp
test/: test_roundtrip.cpp
