<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_codec</name>
  <version>0.1.0</version>
  <description>
    Lossless compression of 32FC1 depth images
    (per-image dictionary + 2D MED prediction + ZSTD).
  </description>
  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/facontidavide/depth_image_compression</url>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>libzstd-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
